--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <!--
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>五2研究所 - powered by 家园工作室</title>
+    <title>无二研究所 - by 家园工作室</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
